--- a/margin.html
+++ b/margin.html
@@ -3398,7 +3398,7 @@ Reference Letter). <br>
             </p>
             <br>
             <div style="padding-top:3vw;" class="mini">
-                <input type="checkbox" id="check" class="_not_checked" />
+                <input type="checkbox" id="check" class="checkbox-checked" />
                 <label for="check">本人/吾等同意利盟證券將本人/吾等之個人資料用於個人資料收集聲明所載的目的。</label>
             </div>
             &nbsp;
