--- a/cash.html
+++ b/cash.html
@@ -30,7 +30,7 @@
                         <table width="100%" >
                             <tr>
                                 <td>
-                                    <strong>Account Opening Form testing</strong> <br>
+                                    <strong>Account Opening Form</strong> <br>
                                     開戶表格
                                 </td>
                                 <td>
