--- a/margin.html
+++ b/margin.html
@@ -4123,6 +4123,7 @@
                     13
                 </div>
             </div>
+            <div class="clear break-after"></div>
         </div>
         <!-- ................................................-->
         <!-- Adding page 14 -->
@@ -4178,6 +4179,7 @@
                     14
                 </div>
             </div>
+            <div class="clear break-after"></div>
         </div>        
         <!-- ................................................-->
         <div class="container">
