--- a/margin.html
+++ b/margin.html
@@ -3108,7 +3108,8 @@
                                     <p style="border-left: 3px; "><span style="padding-left: 20px;">City or town, state
                                             or province. Include postal code where appropriate.</span></p>
                                 </div>
-                                <span><strong style="padding-left: 50px;">{{account_info.identification_country.name_en_US}}</strong></span>
+                                <span><strong
+                                        style="padding-left: 50px;">{{account_info.identification_country.name_en_US}}</strong></span>
                             </td>
                             <td style="border:1px solid black; border-right: 0ch;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
@@ -3262,14 +3263,16 @@
                                     <div>
                                         <span class="bod-bottom  d-in" style="min-width: 460px;"></span>
                                         <span class="bod-bottom  d-in"
-                                            style="min-width: 300px; margin-left: 50px;"><strong style="padding-left: 50px;">{{account.create_date}}</strong></span>
+                                            style="min-width: 300px; margin-left: 50px;"><strong
+                                                style="padding-left: 50px;">{{account.create_date}}</strong></span>
                                         <sub style="padding-left: 30px;">Signature of beneficial owner (or individual
                                             authorized to sign for beneficial owner)</sub>
                                         <sub style="padding-left: 130px;">Date (MM-DD-YYYY)</sub>
                                     </div>
-                                    <span class="bod-bottom  d-in" style="min-width: 460px;"><strong style="padding-left: 70px;">{{account_info.name_chinese}}</strong></span>
+                                    <span class="bod-bottom  d-in" style="min-width: 460px;"><strong
+                                            style="padding-left: 70px;">{{account_info.name_chinese}}</strong></span>
                             </div>
-                             
+
                         </div>
                     </div>
                     <div>
@@ -3282,15 +3285,16 @@
 
 
                 </div>
-                <div >
+                <div>
                     <div class="foot-right">
-                           <span class="pt-15">(06/2017) </span>
-                           <div class="light-p pad">
-                               11
-                           </div>
-                       </div>
-                   </div>
+                        <span class="pt-15">(06/2017) </span>
+                        <div class="light-p pad">
+                            11
+                        </div>
+                    </div>
+                </div>
             </div>
+            <div class="clear break-after"></div>
         </div>
         <!-- //..................................................... // -->
 
@@ -4180,7 +4184,7 @@
                 </div>
             </div>
             <div class="clear break-after"></div>
-        </div>        
+        </div>
         <!-- ................................................-->
         <div class="container">
             <div class="header mt-20">
