--- a/margin.html
+++ b/margin.html
@@ -2973,7 +2973,7 @@
         </div>
         <!-- .......................................... -->
         <!-- Add page 11... -->
-        <div class="container" style="margin-top: 300px;">
+        <div class="container" style="margin-top: 200px;">
             <div class="header mt-50">
                 <td class="pad0">
                     <table width="100%" cellspacing="0">
@@ -3021,13 +3021,13 @@
                                     <strong>Do NOT use this form if:</strong> <strong
                                         style="padding-left: 710px;">Instead, use Form:</strong>
                                 </p>
-                                <ul>
+                                <ul style="text-align: justify;">
                                     <li>You are NOT an individual . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . . . . . . . W-8BEN-E</li>
+                                        . . . . . . . . . . . . . . . .  W-8BEN-E</li>
                                     <li>You are a U.S. citizen or other U.S. person, including a resident alien
                                         individual . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . . W-9</li>
+                                        . . . . . . . . . . . . . . . . . . W-9</li>
                                     <li>You are a beneficial owner claiming that income is effectively connected with
                                         the conduct of trade or business within the United States
                                         (other than personal services) . . . . . . . . . . . . . . . . . . . . . . . . .
