--- a/margin.html
+++ b/margin.html
@@ -3024,22 +3024,22 @@
                                 <ul style="text-align: justify;">
                                     <li>You are NOT an individual . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . . .W-8BEN-E</li>
+                                        . . . . . . . . . . . . . . . . . . . . . . <span style="text-align: right;">W-8BEN-E</span></li>
                                     <li>You are a U.S. citizen or other U.S. person, including a resident alien
                                         individual . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . . . . . . . .W-9</li>
+                                        . . . . . . . . . . . . . . . . . . . . . . . . . . <span style="text-align: right;">W-9</span></li>
                                     <li>You are a beneficial owner claiming that income is effectively connected with
                                         the conduct of trade or business within the United States
                                         (other than personal services) . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . .. . . . . . . . . . . . .
-                                        . . . W-8ECI</li>
+                                        . . . <span style="text-align: right;">W-8ECI</span></li>
                                     <li>You are a beneficial owner who is receiving compensation for personal services
                                         performed in the United States . . . . . . .. . . . . . . . . . . . . . . . . .
-                                        8233 or W-4 </li>
+                                        <span style="text-align: right;">8233 or W-4</span></li>
                                     <li>You are a person acting as an intermediary . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . . . . W-8IMY</li>
+                                        . . . . . . . . . . . . . . . . . . . . . . . <span style="text-align: right;">W-8IMY</span></li>
                                 </ul>
                                 <div>
                                     <div style="margin-top: -20px;">
