--- a/margin.html
+++ b/margin.html
@@ -3024,7 +3024,7 @@
                                 <ul style="text-align: justify;">
                                     <li>You are NOT an individual . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . . . W-8BEN-E</li>
+                                        . . . . . . . . . . . . . . . . . . . . . . . . . W-8BEN-E</li>
                                     <li>You are a U.S. citizen or other U.S. person, including a resident alien
                                         individual . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . .W-9</li>
