--- a/margin.html
+++ b/margin.html
@@ -3022,9 +3022,8 @@
                                         style="padding-left: 710px;">Instead, use Form:</strong>
                                 </p>
                                 <ul style="text-align: justify;">
-                                    <li> <p style="text-align: left;">You are NOT an individual</p>  . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . <p style="text-align: right;">W-8BEN-E</p></li>
+                                    <li> <p><span  style="text-align: left;"></span>You are NOT an individual . . . . . . . . . . . . . . . . . . . . . . . . . . .
+                                        . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .<span style="text-align: right;">W-8BEN-E</span></p></li>
                                     <li>You are a U.S. citizen or other U.S. person, including a resident alien
                                         individual . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . .W-9</li>
