--- a/margin.html
+++ b/margin.html
@@ -3021,9 +3021,9 @@
                                     <strong>Do NOT use this form if:</strong> <strong
                                         style="padding-left: 710px;">Instead, use Form:</strong>
                                 </p>
-                                <ul style="text-align: justify;">
-                                    <li> <p><span  style="text-align: left;"></span>You are NOT an individual . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .<span style="text-align: right;">W-8BEN-E</span></p></li>
+                                <ul >
+                                 <div style="text-align: justify;">
+                                    <li><span  style="text-align: left;">You are NOT an individual</span>. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .<span style="text-align: right;">W-8BEN-E</span></li>
                                     <li>You are a U.S. citizen or other U.S. person, including a resident alien
                                         individual . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . .W-9</li>
@@ -3039,6 +3039,7 @@
                                     <li>You are a person acting as an intermediary . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . W-8IMY</li>
+                                </div>
                                 </ul>
                                 <div>
                                     <div style="margin-top: -20px;">
