--- a/margin.html
+++ b/margin.html
@@ -3021,9 +3021,10 @@
                                     <strong>Do NOT use this form if:</strong> <strong
                                         style="padding-left: 710px;">Instead, use Form:</strong>
                                 </p>
-                                <ul >
-                                 <div style="text-align: justify;">
-                                    <li><span  style="text-align: left;">You are NOT an individual</span>. . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .<span style="text-align: right;">W-8BEN-E</span></li>
+                                <ul>
+                                    <li>You are NOT an individual . . . . . . . . . . . . . . . . . . . . . . . . . . .
+                                        . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+                                        . . . . . . . . . . . . . . . . . . . . . . . . . W-8BEN-E</li>
                                     <li>You are a U.S. citizen or other U.S. person, including a resident alien
                                         individual . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . .W-9</li>
@@ -3039,7 +3040,6 @@
                                     <li>You are a person acting as an intermediary . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . W-8IMY</li>
-                                </div>
                                 </ul>
                                 <div>
                                     <div style="margin-top: -20px;">
