--- a/margin.html
+++ b/margin.html
@@ -3025,9 +3025,9 @@
                                     <li>You are NOT an individual . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . W-8BEN-E</li>
-                                    <li>You are a U.S. citizen or other U.S. person, including a resident alien
-                                        individual . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . . . . . . . .W-9</li>
+                                    <li>You are a U.S. citizen or other U.S. person, including a resident alien individual
+                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
+                                        . . . . . . . . . . . . . . . . . . . . . . . . .W-9</li>
                                     <li>You are a beneficial owner claiming that income is effectively connected with
                                         the conduct of trade or business within the United States
                                         (other than personal services) . . . . . . . . . . . . . . . . . . . . . . . . .
