--- a/margin.html
+++ b/margin.html
@@ -3030,7 +3030,8 @@
                                         . . . . . . . . . . . . . . .W-9</li>
                                     <li>You are a beneficial owner claiming that income is effectively connected with
                                         the conduct of trade or business within the United<br>(other than personal services) 
-                                        . . . . . . . . . . . . . . . . . . . . . . . .  W-8ECI</li>
+                                        . . . . . . . . . . . . . . . . . . . . . . . .  . . . . . . . . . . . . . . . . 
+                                        . . . . . . . . . . . . . . .W-8ECI</li>
                                     <li>You are a beneficial owner who is receiving compensation for personal services
                                         performed in the United States . . . . . . .. . . . . . . . . . . . . . . . . .
                                         8233 or W-4 </li>
