--- a/margin.html
+++ b/margin.html
@@ -3027,14 +3027,14 @@
                                         . . . . . . . . . . . . . . . . . . . . . . . .W-8BEN-E</li>
                                     <li>You are a U.S. citizen or other U.S. person, including a resident alien individual
                                          . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . .W-9</li>
+                                        . . . . . . . . . . . . . .W-9</li>
                                     <li>You are a beneficial owner claiming that income is effectively connected with
                                         the conduct of trade or business within the United<br>(other than personal services) 
                                         . . . . . . . . . . . . . . . . . . . . . . . .  . . . . . . . . . . . . . . . . 
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .  . . . . . . 
                                          . . . . . . . . . . . . . . W-8ECI</li>
                                     <li>You are a beneficial owner who is receiving compensation for personal services
-                                        performed in the United States . . . . . . .. . . . . . . . . . . . . . . . . .
+                                        performed in the United States . . . . . . .. . . . . . . . . . . . . . . .
                                         8233 or W-4 </li>
                                     <li>You are a person acting as an intermediary . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
