--- a/margin.html
+++ b/margin.html
@@ -3034,11 +3034,11 @@
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .  . . . . . . 
                                          . . . . . . . . . . . . . . W-8ECI</li>
                                     <li>You are a beneficial owner who is receiving compensation for personal services
-                                        performed in the United States . . . . . . .. . . . . . . . . . . . . . . .
+                                        performed in the United States . . . . . . .. . . . . . . . . . . . . . .
                                         8233 or W-4 </li>
                                     <li>You are a person acting as an intermediary . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . . . . . . W-8IMY</li>
+                                        . . . . . . . . . . . . . . . . . . .W-8IMY</li>
                                 </ul>
                                 <div>
                                     <div style="margin-top: -20px;">
