--- a/margin.html
+++ b/margin.html
@@ -3038,7 +3038,7 @@
                                         8233 or W-4 </li>
                                     <li>You are a person acting as an intermediary . . . . . . . . . . . . . . . . . . .
                                         . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-                                        . . . . . . . . . . . . . . . . . . .W-8IMY</li>
+                                        . . . . . . . . . . . . . . . . . . . . .W-8IMY</li>
                                 </ul>
                                 <div>
                                     <div style="margin-top: -20px;">
