--- a/margin.html
+++ b/margin.html
@@ -2973,7 +2973,7 @@
         </div>
         <!-- .......................................... -->
         <!-- Add page 11... -->
-        <div class="container" style="margin-top: 200px;">
+        <div class="container" style="margin-top: 200px; font-size: 14px;">
             <div class="header mt-50">
                 <td class="pad0">
                     <table width="100%" cellspacing="0">
