--- a/margin.html
+++ b/margin.html
@@ -3207,7 +3207,7 @@
                 <div style="margin-top: -12px;">
                     <span class="bod-bottom  d-in" style="min-width: 1000px;"></span>
                 </div>
-                <div>
+                <div style="font-size: 16px;">
                     <p>
                         Under penalties of perjury, I declare that I have examined the information on this form and to
                         the best of my knowledge and belief it is true, correct, and complete. I further certify under
