--- a/margin.html
+++ b/margin.html
@@ -3275,7 +3275,7 @@
                         </div>
                     </div>
                     <div>
-                        <span class="bod-bottom  d-in" style="min-width: 1000px; margin-top: 40px;"></span>
+                        <span class="bod-bottom  d-in" style="min-width: 1000px; margin-top: 40px;"> <span style="font-size: 14px; padding-left: 120px;">Print name of signer</span></span>
                         <strong>For Paperwork Reduction Act Notice, see separate instructions.</strong>
                         <span style="padding-left: 110px;">Cat. No. 25047Z </span>
                         <span style="padding-left: 50px;">Form <strong style="font-size: 18px;">W-8BEN </strong> (Rev.
