--- a/margin.html
+++ b/margin.html
@@ -3066,11 +3066,11 @@
                     </tr>
                 </td>
                 <table style="width: 100%;">
-                    <tr style="border:1px solid black; border-left: 0ch; border-right: 0ch; ">
+                    <tr style="border:1px solid black;">
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p style="border-left: 3px; "><strong>1</strong> <span
+                                    <p><strong>1</strong> <span
                                             style="padding-left: 5px;">Name
                                             of individual who is the beneficial
                                             Owner</strong>(see instructions)
@@ -3080,14 +3080,14 @@
                             </td>
                             <td style="border:1px solid black; border-right: 0ch;">
                                 <div style="margin-top: -60px; margin-bottom: 20px;">
-                                    <p style="border-left: 3px; "><strong>2</strong> <span
+                                    <p ><strong>2</strong> <span
                                             style="padding-left: 5px;">Country of citizenship</span></p>
                                 </div>
                                 <span><strong>{{account_info.identification_country.name_en_US}}</strong></span>
                             </td>
                         </div>
                     </tr>
-                    <tr style="border:1px solid black; border-left: 0ch; border-right: 0ch; ">
+                    <tr style="border:1px solid black; ">
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
