--- a/margin.html
+++ b/margin.html
@@ -3066,7 +3066,7 @@
                     </tr>
                 </td>
                 <table style="width: 100%;">
-                    <tr style="border:1px solid black;">
+                    <tr style="border:1px solid black; border-left: none; border-right: none;">
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
