--- a/margin.html
+++ b/margin.html
@@ -3078,7 +3078,7 @@
                                 </div>
                                 <span><strong style="padding-left: 70px;">{{account_info.name_chinese}}</strong></span>
                             </td>
-                            <td style="border:1px solid black; border-right: 0ch;">
+                            <td style="border:1px solid black; border-right: none;">
                                 <div style="margin-top: -60px; margin-bottom: 20px;">
                                     <p ><strong>2</strong> <span
                                             style="padding-left: 5px;">Country of citizenship</span></p>
