--- a/margin.html
+++ b/margin.html
@@ -3087,7 +3087,7 @@
                             </td>
                         </div>
                     </tr>
-                    <tr style="border:1px solid black; ">
+                    <tr style="border:1px solid black; border-left: none; border-right: none;"">
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
@@ -3100,7 +3100,7 @@
                             </td>
                         </div>
                     </tr>
-                    <tr style="border:1px solid black; border-left: 0ch; border-right: 0ch; ">
+                    <tr style="border:1px solid black; border-left: none; border-right: none; ">
                         <div>
                             <td>
                                 <div style="margin-top: -60px; margin-bottom: 20px;">
@@ -3110,7 +3110,7 @@
                                 <span><strong
                                         style="padding-left: 50px;">{{account_info.identification_country.name_en_US}}</strong></span>
                             </td>
-                            <td style="border:1px solid black; border-right: 0ch;">
+                            <td style="border:1px solid black; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
                                     <p style="border-left: 3px; "> <span style="padding-left: 5px;">Country</span></p>
                                 </div>
@@ -3118,7 +3118,7 @@
                             </td>
                         </div>
                     </tr>
-                    <tr style="border:1px solid black; border-left: 0ch; border-right: 0ch; ">
+                    <tr style="border:1px solid black; border-left: none; border-right: none; ">
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
@@ -3130,7 +3130,7 @@
                             </td>
                         </div>
                     </tr>
-                    <tr style="border:1px solid black; border-left: 0ch; border-right: 0ch; ">
+                    <tr style="border:1px solid black; border-left: none; border-right: none; ">
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
@@ -3138,14 +3138,14 @@
                                             or province. Include postal code where appropriate.</span></p>
                                 </div>
                             </td>
-                            <td style="border:1px solid black; border-right: 0ch;">
+                            <td style="border:1px solid black; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
                                     <p style="border-left: 3px; "> <span style="padding-left: 5px;">Country</span></p>
                                 </div>
                             </td>
                         </div>
                     </tr>
-                    <tr style="border:1px ; border-left: 0ch; border-right: 0ch; ">
+                    <tr style="border:1px ; border-left: none; border-right: none; ">
                         <div>
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
@@ -3158,7 +3158,7 @@
                         </div>
                     </tr>
                     <table style="width: 100%;">
-                        <tr style="border:1px solid #000000; border-left: 0ch; border-right: 0ch; ">
+                        <tr style="border:1px solid #000000; border-left: none; border-right: none; ">
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
                                     <p style="border-left: 3px; "><strong>6a</strong> <span
@@ -3166,7 +3166,7 @@
                                         </span></p>
                                 </div>
                             </td>
-                            <td style="border:1px solid #000000; border-right: 0ch;">
+                            <td style="border:1px solid #000000; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
                                     <p style="border-left: 3px; "><strong>6b</strong> <span
                                             style="padding-left: 5px;">Check if FTIN not legally required . . . . . . .
@@ -3180,7 +3180,7 @@
                                 </div>
                             </td>
                         </tr>
-                        <tr style="border:1px solid #000000; border-left: 0ch; border-right: 0ch; ">
+                        <tr style="border:1px solid #000000; border-left: none; border-right: none; ">
                             <td>
                                 <div style="margin-top: -60px; margin-bottom: 20px;">
                                     <p><strong>7</strong> <span
@@ -3188,9 +3188,9 @@
                                         </span></p>
                                 </div>
                             </td>
-                            <td style="border:1px solid #000000; border-right: 0ch;">
+                            <td style="border:1px solid #000000; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p style="border-left: 3px; border-right: 0ch; "><strong>8</strong> <span
+                                    <p style="border-left: 3px; border-right: none; "><strong>8</strong> <span
                                             style="padding-left: 5px;">Date of birth (MM-DD-YYYY) (see
                                             instructions</span></p>
                                 </div>
