--- a/margin.html
+++ b/margin.html
@@ -3161,14 +3161,14 @@
                         <tr style="border:1px solid #000000; border-left: none; border-right: none; ">
                             <td>
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p style="border-left: 3px; "><strong>6a</strong> <span
+                                    <p style="border-left: 3px; padding-left: 3px; "><strong>6a</strong> <span
                                             style="padding-left: 5px;">Foreign tax identifying number (see instructions)
                                         </span></p>
                                 </div>
                             </td>
                             <td style="border:1px solid #000000; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p style="border-left: 3px; "><strong>6b</strong> <span
+                                    <p style="border-left: 3px;"><strong>6b</strong> <span
                                             style="padding-left: 5px;">Check if FTIN not legally required . . . . . . .
                                             . . . .</p>
                                 </div>
@@ -3190,7 +3190,7 @@
                             </td>
                             <td style="border:1px solid #000000; border-right: none;">
                                 <div style="margin-top: -10px; margin-bottom: 20px;">
-                                    <p style="border-left: 3px; border-right: none; "><strong>8</strong> <span
+                                    <p style="border-left: 3px; border-right: none; padding-left: 3px;"><strong>8</strong> <span
                                             style="padding-left: 5px;">Date of birth (MM-DD-YYYY) (see
                                             instructions</span></p>
                                 </div>
