--- a/margin.html
+++ b/margin.html
@@ -3157,8 +3157,6 @@
                             </td>
                         </div>
                     </tr>
-                </table>
-                <table style="width: 100%;">
                     <tr style="border:1px solid #000000; border-left: none; border-right: none; ">
                         <td>
                             <div style="margin-top: -10px; margin-bottom: 20px;">
@@ -3199,6 +3197,9 @@
                         </td>
                     </tr>
                 </table>
+                <!-- <table style="width: 100%;">
+                    
+                </table> -->
                 <div style="margin-top: -2px;">
                     <strong style="background-color: black; color: aliceblue;">Part II</strong>
                     <strong style="padding-left: 10px;">Claim of Tax Treaty Benefits</strong>(for chapter 3 purposes
