--- a/margin.html
+++ b/margin.html
@@ -3195,6 +3195,7 @@
                             </div>
                             <span style="padding-left: 50px; "><strong>{{account.create_date}}</strong></span>
                         </td>
+                        <span class="bod-bottom  d-in" style="min-width: 1000px;"></span>
                     </tr>
                 </table>
                 <!-- <table style="width: 100%;">
