--- a/margin.html
+++ b/margin.html
@@ -3179,7 +3179,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr style="border:1px solid #000000; border-left: none; border-right: none; ">
+                    <tr style="border:1px solid #000000; border-left: none; border-right: none; border-bottom: 1px solid black;">
                         <td>
                             <div style="margin-top: -60px; margin-bottom: 20px;">
                                 <p><strong>7</strong> <span
@@ -3195,7 +3195,6 @@
                             </div>
                             <span style="padding-left: 50px; "><strong>{{account.create_date}}</strong></span>
                         </td>
-                        <span class="bod-bottom  d-in" style="min-width: 1000px;"></span>
                     </tr>
                 </table>
                 <!-- <table style="width: 100%;">
