--- a/margin.html
+++ b/margin.html
@@ -3168,8 +3168,7 @@
                         <td style="border:1px solid #000000; border-right: none;">
                             <div style="margin-top: -10px; margin-bottom: 20px;">
                                 <p style="border-left: 3px;"><strong>6b</strong> <span
-                                        style="padding-left: 5px;">Check if FTIN not legally required . . . . . . .
-                                        . . . .</p>
+                                        style="padding-left: 5px;">Check if FTIN not legally required . .</p>
                             </div>
                         </td>
                         <td>
@@ -3179,7 +3178,7 @@
                             </div>
                         </td>
                     </tr>
-                    <tr style="border:1px solid #000000; border-left: none; border-right: none; border-bottom: 1px solid black;">
+                    <tr style="border:1px solid #000000; border-left: none; border-right: none;">
                         <td>
                             <div style="margin-top: -60px; margin-bottom: 20px;">
                                 <p><strong>7</strong> <span
