--- a/margin.html
+++ b/margin.html
@@ -3168,15 +3168,17 @@
                         <td style="border:1px solid #000000; border-right: none;">
                             <div style="margin-top: -10px; margin-bottom: 20px;">
                                 <p style="border-left: 3px;"><strong>6b</strong> <span
-                                        style="padding-left: 5px;">Check if FTIN not legally required . .</p>
+                                        style="padding-left: 5px;">Check if FTIN not legally required . . . </p>
                             </div>
                         </td>
                         <td>
-                            <div style="margin-top: -30px">
+                            <div style="margin-top: -30px; margin-right: 40px;">
                                 <input type="checkbox" id="1" class="" />
                                 <label for="1 "> &nbsp;
                             </div>
+                            </div>
                         </td>
+                       
                     </tr>
                     <tr style="border:1px solid #000000; border-left: none; border-right: none;">
                         <td>
