--- a/margin.html
+++ b/margin.html
@@ -3168,11 +3168,11 @@
                         <td style="border:1px solid #000000; border-right: none;">
                             <div style="margin-top: -10px; margin-bottom: 20px;">
                                 <p style="border-left: 3px;"><strong>6b</strong> <span
-                                        style="padding-left: 5px;">Check if FTIN not legally required . . . </p>
+                                        style="padding-left: 5px;">Check if FTIN  <br><span style="padding-left: 6px;">not legally required . . .</span>  </p>
                             </div>
                         </td>
                         <td>
-                            <div style="margin-top: -30px; margin-right: 40px;">
+                            <div style="margin-top: -40px; margin-right: 40px;">
                                 <input type="checkbox" id="1" class="" />
                                 <label for="1 "> &nbsp;
                             </div>
