--- a/margin.html
+++ b/margin.html
@@ -3065,7 +3065,7 @@
                         </td>
                     </tr>
                 </td>
-                <table style="width: 100%;">
+                <table style="width: 110%;">
                     <tr style="border:1px solid black; border-left: none; border-right: none;">
                         <div>
                             <td>
@@ -3172,7 +3172,7 @@
                             </div>
                         </td>
                         <td>
-                            <div style="margin-top: -40px; margin-right: 40px;">
+                            <div style="margin-top: -40px;">
                                 <input type="checkbox" id="1" class="" />
                                 <label for="1 "> &nbsp;
                             </div>
